--- a/manifest.json
+++ b/manifest.json
@@ -3,19 +3,114 @@
   "short_name": "佐渡で食えっちゃ",
   "description": "佐渡島内の飲食店、駐車場、公共トイレの位置情報を網羅。快適な佐渡の旅をサポートします。",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#4a6da7",
+  "orientation": "any",
   "icons": [
     {
-      "src": "./src/images/row2.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/icon-384x384.png",
+      "sizes": "384x384",
       "type": "image/png"
     },
     {
-      "src": "./src/images/row2.png",
-      "sizes": "512x512",
+      "src": "/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-152x152.png",
+      "sizes": "152x152",
       "type": "image/png"
     }
-  ]
+  ],
+  "shortcuts": [
+    {
+      "name": "飲食店を探す",
+      "short_name": "飲食店",
+      "url": "/?category=restaurant",
+      "icons": [
+        {
+          "src": "/icons/restaurant-192x192.png",
+          "sizes": "192x192"
+        }
+      ]
+    },
+    {
+      "name": "駐車場を探す",
+      "short_name": "駐車場",
+      "url": "/?category=parking",
+      "icons": [
+        {
+          "src": "/icons/parking-192x192.png",
+          "sizes": "192x192"
+        }
+      ]
+    },
+    {
+      "name": "トイレを探す",
+      "short_name": "トイレ",
+      "url": "/?category=toilet",
+      "icons": [
+        {
+          "src": "/icons/toilet-192x192.png",
+          "sizes": "192x192"
+        }
+      ]
+    }
+  ],
+  "categories": ["travel", "navigation", "lifestyle"],
+  "lang": "ja",
+  "dir": "ltr",
+  "prefer_related_applications": false,
+  "related_applications": [],
+  "iarc_rating_id": "",
+  "screenshots": [
+    {
+      "src": "/screenshots/screenshot1.jpg",
+      "sizes": "1280x720",
+      "type": "image/jpeg",
+      "platform": "wide",
+      "label": "佐渡で食えっちゃのマップ画面"
+    },
+    {
+      "src": "/screenshots/screenshot2.jpg",
+      "sizes": "1280x720",
+      "type": "image/jpeg",
+      "platform": "wide",
+      "label": "飲食店の詳細情報"
+    }
+  ],
+  "serviceworker": {
+    "src": "/service-worker.js",
+    "scope": "/"
+  }
 }
