--- a/package.json
+++ b/package.json
@@ -4,13 +4,7 @@
   "description": "A solution for the Sadodekueccha challenge using React, Google Maps, and TypeScript.",
   "private": true,
   "type": "module",
-  "keywords": [
-    "react",
-    "google maps",
-    "typescript",
-    "kueccha",
-    "pwa"
-  ],
+  "keywords": ["react", "google maps", "typescript", "kueccha", "pwa"],
   "author": "Yuichiro Nakaguchi <nakaguchi07@gmail.com>",
   "contributors": [
     {
@@ -37,21 +31,18 @@
     "mobile:dev": "pnpm run check:env && vite --host",
     "preview": "vite preview",
     "start": "node server.js",
-
     "// ビルド関連": "",
     "build": "pnpm run check:env && vite build",
     "build:analyze": "vite build --mode analyze",
     "build:prod": "pnpm run build && pnpm run optimize",
     "optimize": "ts-node scripts/optimize-assets.ts",
     "analyze:bundle": "vite build --mode analyze",
-
     "// テスト関連": "",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "test:e2e": "playwright test",
-
     "// 品質管理関連": "",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -59,10 +50,9 @@
     "typecheck": "tsc --noEmit",
     "security": "pnpm audit",
     "security:fix": "pnpm audit fix",
-
     "// ユーティリティ": "",
     "check:env": "ts-node scripts/check-env.ts",
-    "prepare": "husky install",
+    "prepare": "husky",
     "clean": "rimraf dist",
     "reset": "rimraf node_modules pnpm-lock.yaml dist && pnpm store prune"
   },
@@ -82,23 +72,23 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@playwright/test": "^1.40.0",
+    "@playwright/test": "^1.51.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/node": "^20.17.24",
+    "@types/node": "^22.13.10",
     "@types/react": "^19.0.11",
     "@types/react-dom": "^19.0.4",
     "@types/supercluster": "^7.1.3",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
     "@vitejs/plugin-react": "^4.3.4",
-    "@vitest/coverage-v8": "^1.0.0",
-    "@vitest/ui": "^1.0.0",
-    "c8": "^9.1.0",
+    "@vitest/coverage-v8": "^3.0.9",
+    "@vitest/ui": "^3.0.9",
+    "c8": "^10.1.3",
     "chalk": "^5.4.1",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
-    "eslint-import-resolver-typescript": "^4.2.0",
+    "eslint-import-resolver-typescript": "^4.2.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-no-for-of-loops": "^1.0.1",
@@ -110,32 +100,25 @@
     "lint-staged": "^15.5.0",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "rollup-plugin-visualizer": "^5.12.0",
+    "rollup-plugin-visualizer": "^5.14.0",
     "sharp": "^0.33.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
     "vite": "^6.2.2",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-pwa": "^0.19.0",
+    "vite-plugin-pwa": "^0.21.1",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^1.0.0"
+    "vitest": "^3.0.9"
   },
   "pnpm": {
-    "onlyBuiltDependencies": [
-      "esbuild"
-    ],
+    "onlyBuiltDependencies": ["esbuild"],
     "overrides": {
       "vite": "^6.2.2"
     }
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{json,md,yml,css,scss}": [
-      "prettier --write"
-    ]
+    "*.{js,jsx,ts,tsx}": ["eslint --fix", "prettier --write"],
+    "*.{json,md,yml,css,scss}": ["prettier --write"]
   },
   "browserslist": [
     ">1%",
