--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "moduleResolution": "bundler",
     "lib": ["DOM", "DOM.Iterable", "ES2022", "ESNext", "WebWorker"],
     "jsx": "react-jsx",
-    
+
     // 厳格な型チェック設定
     "strict": true,
     "noUncheckedIndexedAccess": true,
@@ -18,21 +18,21 @@
     "allowUnusedLabels": false,
     "allowUnreachableCode": false,
     "noErrorTruncation": true,
-    
+
     // エラー検出と品質向上設定
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "checkJs": true,
-    
+
     // モジュール・インポート設定
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "verbatimModuleSyntax": true,
-    
+
     // プロジェクト構成設定
     "baseUrl": ".",
     "paths": {
@@ -50,7 +50,7 @@
       "@locales/*": ["src/locales/*"]
     },
     "typeRoots": ["./node_modules/@types", "./types"],
-    
+
     // ビルド・デバッグ設定
     "outDir": "./dist",
     "sourceMap": true,
@@ -58,11 +58,11 @@
     "incremental": true,
     "tsBuildInfoFile": "./.tsbuildinfo",
     "declaration": false,
-    
+
     // パフォーマンス最適化設定
     "useDefineForClassFields": true,
     "importsNotUsedAsValues": "remove",
-    
+
     // 互換性・安定性設定
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
@@ -77,9 +77,9 @@
     "css.d.ts"
   ],
   "exclude": [
-    "dist", 
-    "node_modules", 
-    "**/*.spec.ts", 
+    "dist",
+    "node_modules",
+    "**/*.spec.ts",
     "**/*.test.ts",
     "**/__mocks__/*",
     "**/__tests__/*",
@@ -90,7 +90,5 @@
     "esm": true,
     "experimentalSpecifierResolution": "node"
   },
-  "references": [
-    { "path": "./tsconfig.node.json" }
-  ]
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
