--- a/.npmrc
+++ b/.npmrc
@@ -1,23 +1,9 @@
 # 基本設定
 registry=https://registry.npmjs.org/
-loglevel=warn
-
-# キャッシュ最適化 - モバイル開発の高速な繰り返し開発のため
-cache-min=30
-prefer-offline=true
-
-# パッケージのバージョン一貫性を確保
 save-exact=true
-
-# CI/CD効率化
+prefer-offline=true
 progress=false
-fund=false
-
-# ネットワーク安定性強化
-fetch-retries=3
-fetch-retry-factor=2
-fetch-retry-mintimeout=10000
-network-timeout=60000
-
-# 開発効率向上
-update-notifier=false
+# pnpm特有の設定
+shamefully-hoist=true
+strict-peer-dependencies=false
+auto-install-peers=true
