--- a/package.json
+++ b/package.json
@@ -1,59 +1,32 @@
 {
   "name": "sadodekueccha",
   "version": "1.0.0",
-  "description": "A solution for the Sadodekueccha challenge using React, Google Maps, and TypeScript.",
+  "description": "佐渡島の観光支援アプリ - 飲食店、駐車場、公共トイレのマップ",
   "private": true,
   "type": "module",
-  "keywords": ["react", "google maps", "typescript", "kueccha", "pwa"],
   "author": "Yuichiro Nakaguchi <nakaguchi07@gmail.com>",
-  "contributors": [
-    {
-      "name": "Yuichiro Nakaguchi",
-      "email": "nakaguchi07@gmail.com",
-      "url": "https://github.com/nakanaka07"
-    }
-  ],
   "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nakanaka07/sadodekueccha.git"
-  },
-  "bugs": {
-    "url": "https://github.com/nakanaka07/sadodekueccha/issues"
-  },
+  "repository": "github:nakanaka07/sadodekueccha",
   "engines": {
-    "node": ">=20",
-    "pnpm": ">=8"
+    "node": ">=20"
   },
   "scripts": {
-    "// 開発関連": "",
     "dev": "pnpm run check:env && vite",
     "mobile:dev": "pnpm run check:env && vite --host",
-    "preview": "vite preview",
-    "start": "node server.js",
-    "// ビルド関連": "",
     "build": "pnpm run check:env && vite build",
-    "build:analyze": "vite build --mode analyze",
     "build:prod": "pnpm run build && pnpm run optimize",
     "optimize": "ts-node scripts/optimize-assets.ts",
-    "analyze:bundle": "vite build --mode analyze",
-    "// テスト関連": "",
+    "start": "node server.js",
+    "preview": "vite preview",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
     "test:e2e": "playwright test",
-    "// 品質管理関連": "",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "eslint . --fix",
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit",
-    "security": "pnpm audit",
-    "security:fix": "pnpm audit fix",
-    "// ユーティリティ": "",
     "check:env": "ts-node scripts/check-env.ts",
     "prepare": "husky",
-    "clean": "rimraf dist",
     "reset": "rimraf node_modules pnpm-lock.yaml dist && pnpm store prune"
   },
   "dependencies": {
@@ -78,29 +51,22 @@
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.11",
     "@types/react-dom": "^19.0.4",
-    "@types/supercluster": "^7.1.3",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^3.0.9",
     "@vitest/ui": "^3.0.9",
-    "c8": "^10.1.3",
     "chalk": "^5.4.1",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
-    "eslint-import-resolver-typescript": "^4.2.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-no-for-of-loops": "^1.0.1",
-    "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
-    "fast-glob": "^3.3.3",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0",
     "prettier": "^3.5.3",
     "rimraf": "^6.0.1",
-    "rollup-plugin-visualizer": "^5.14.0",
     "sharp": "^0.33.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
@@ -110,26 +76,9 @@
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.0.9"
   },
-  "pnpm": {
-    "onlyBuiltDependencies": ["esbuild"],
-    "overrides": {
-      "vite": "^6.2.2"
-    }
-  },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": ["eslint --fix", "prettier --write"],
     "*.{json,md,yml,css,scss}": ["prettier --write"]
   },
-  "browserslist": [
-    ">1%",
-    "last 2 versions",
-    "not dead",
-    "not IE 11",
-    "Chrome >= 90",
-    "Firefox >= 90",
-    "Safari >= 14",
-    "Edge >= 90",
-    "iOS >= 14",
-    "Android >= 7"
-  ]
+  "browserslist": [">1%", "last 2 versions", "not dead", "not IE 11", "Chrome >= 90", "iOS >= 14"]
 }
