--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "validate:env": "node scripts/comprehensive-env-check.js",
     "docs": "npx serve docs",
     "// 静的サイトデプロイ": "----------------------------",
-    "predeploy": "node scripts/set-base-path.js && pnpm build:ghpages",
-    "deploy": "node scripts/deploy-to-gh-pages.js",
+    "predeploy": "node scripts/set-base-path.mjs && pnpm build:ghpages",
+    "deploy": "node scripts/deploy-to-gh-pages.mjs",
     "postdeploy": "echo 'サイトがデプロイされました 🚀'",
     "serve:dist": "npx serve dist",
     "// CI/CD連携": "----------------------------",
