--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,30 +6,43 @@
     "moduleResolution": "Bundler",
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "target": "ESNext",
+    "target": "ES2022", // モダンNode.js環境に最適化
     "resolveJsonModule": true,
     "declaration": true, // 複合プロジェクトでは宣言ファイルの生成が必要
     "outDir": "./dist-node", // 宣言ファイルの出力先を明示的に指定
+    "rootDir": "./", // ソースファイルのルートを明示的に指定
     "types": ["node", "vite/client", "vitest/globals"],
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "isolatedModules": true,
 
+    // パフォーマンス最適化
+    "incremental": true, // ビルド速度の向上
+    "tsBuildInfoFile": "./dist-node/.tsbuildinfo", // 出力先と合わせた場所
+
     // KISS原則に基づくシンプルな型チェック
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-
-    // シンプル化したパスエイリアス - tsconfig.jsonと一致
+    "exactOptionalPropertyTypes": true, // 厳密なオプショナル型チェック
+    "noImplicitOverride": true, // 継承時の明示的なオーバーライド    // 拡充したパスエイリアス - tsconfig.jsonと一致
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@components/*": ["./src/components/*"],
+      "@hooks/*": ["./src/hooks/*"],
+      "@utils/*": ["./src/utils/*"],
+      "@types/*": ["./src/types/*"],
+      "@assets/*": ["./src/assets/*"],
+      "@constants/*": ["./src/constants/*"],
+      "@config/*": ["./config/*"]
     }
-  }, // Node.js環境で処理するファイル - 環境変数関連とその依存ファイルを明示的に含める
+  },
+  // Node.js環境で処理するファイル - 環境変数関連とその依存ファイルを明示的に含める
   "include": [
     "vite.config.ts",
     "vitest.config.ts",
-    "scripts/**/*.ts",
+    "scripts/**/*.{js,mjs}", // 実際のファイル拡張子に合わせて修正
     "env.d.ts",
     "config/**/*.ts",
     "src/utils/env/**/*.ts",
